# TempoCut

./: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  __init__.py  audio skippy copy paste.txt  audio_skippy_STEREO.py  audio_skippy_SURROUND.py  how to time compress audio.txt  pipeline.sh  pyproject.toml  retime_srt.py  time_compressor_FAST.py  time_compressor_pipeline.bat
tempo_cut/: cli.py  subs.py  video.py
tempocut.egg-info/: PKG-INFO  entry_points.txt  requires.txt  top_level.txt
